# dsalgo-python

./: .env  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  _config.yml  ci.sh  mkdocs.yml  pdoc.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/docs/: CONTRIBUTING.md
docker/: .env  Dockerfile  docker-compose.yml
docs/: _sphinx_conf.py
docs/api/: dsalgo.aa_tree.rst  dsalgo.ab_tree.rst  dsalgo.abstract_protocol.rst  dsalgo.abstract_structure.rst  dsalgo.abundunt_number.rst  dsalgo.addressable_heap.rst  dsalgo.af_heap.rst  dsalgo.analysis_search.rst  dsalgo.array.rst  dsalgo.automaton.rst  dsalgo.avl_tree_recurse.rst  dsalgo.b_heap.rst  dsalgo.b_plus_tree.rst  dsalgo.b_star_tree.rst  dsalgo.beap.rst  dsalgo.biconnected_components.rst  dsalgo.binary_heap.rst  dsalgo.binary_search.rst  dsalgo.binary_search_tree.rst  dsalgo.binomial.rst  dsalgo.binomial_heap.rst  dsalgo.bipartite_graph.rst  dsalgo.bitset.rst  dsalgo.bk_tree.rst  dsalgo.block_cut_tree.rst  dsalgo.brodal_queue.rst  dsalgo.btree.rst  dsalgo.bx_tree.rst  dsalgo.c_trie.rst  dsalgo.carmichael_number.rst  dsalgo.cartesian_tree.rst  dsalgo.centroid_decomposition.rst  dsalgo.chain_decomposition.rst  dsalgo.chinese_remainder_theorem.rst  dsalgo.combinatorics.rst  dsalgo.connected_components.rst  dsalgo.constant.rst  dsalgo.convolution.rst  dsalgo.cover_tree.rst  dsalgo.dancing_link.rst  (+279 more)
dsalgo/: typing.py
dsalgo/algebra/: bit.py  modular.py  numeral_system.py
dsalgo/analysis/: search.py
dsalgo/combinatorics/: binom.py  choose.py  combination.py  pascal.py
dsalgo/combinatorics/binom/: binom.py
dsalgo/container/: deque.py  linked_list.py  multiset.py  queue.py
dsalgo/dp/: longest_common_subsequence.py  longest_increasing_sequence.py
dsalgo/graph_theory/: connected_components.py  euler_tour.py  make_tree.py  maxflow.py  mincost_flow.py  minimum_spanning_tree.py
dsalgo/numba/combinatorics/: choose.py  combination.py
dsalgo/numba/graph_theory/: scc.py
dsalgo/numpy/algebra/: modular.py
dsalgo/numpy/combinatorics/: combination.py
dsalgo/numpy/dp/: longest_common_sequence.py
dsalgo/search/: binary_search.py
prime_text/: readme.md
scripts/: generate_sphinx_docs_headers.py  test.sh
src/dsalgo/: _extended_euclidean_mod.py  abelian_group_protocol.py  abstract_structure.py  accumulation.py  add_range_sum_range_fenwick_tree.py  add_range_sum_range_lazy_segment_tree.py  argmax.py  array.py  avl_tree_recurse.py  avl_tree_set_test.py  bezout_identity.py  bezout_theorem.py  binary_heap.py  binary_heap_test.py  binary_operation_protocol.py  binary_search.py  binary_search_tree.py  bincount.py  binomial.py  bipartite_graph.py  bit_length.py  bit_reverse.py  bitset.py  bitset_test.py  bucket_set.py  carmichael_number.py  centroid_decomposition.py  chain_decomposition.py  chinese_remainder_theorem.py  chinese_remainder_theorem_test.py  circular_buffer_deque.py  circular_buffer_deque_test.py  combinations.py  combinations_test.py  combinatorics.py  combinatorics_test.py  commutative_monoid_protoco.py  compress_array.py  connected_components.py  connected_components_bfs.py  (+230 more)
src/dsalgo/algebra/: __init__.py  accumulation.py  bit.py  convolution.py  modular.py  numeral_system.py  numeral_system_test.py  tensor.py  vector.py
src/dsalgo/analysis/: find_root.py  newton.py  search.py
src/dsalgo/combinatorics/: binom.py  choose.py  combinations.py  combinatorics.py  next_combination.py  next_permutation.py  pascal.py  pascal_test.py  pascal_triangle.py  permutations.py  repeated_combinations.py  repeated_permutations.py
src/dsalgo/container/: deque.py  linked_list.py  multiset.py  queue.py  set.py  stack.py  stack_test.py
src/dsalgo/descrete/: argmax.py  compress_array.py  flatnonzero.py  inversion_number.py
src/dsalgo/dp/: __init__.py  lcs.py  lis.py  longest_common_subsequence_test.py  longest_increasing_sequence.py
src/dsalgo/game_theory/: nim.py
src/dsalgo/geometry/: segment2d.py  triangle.py  trigonometly.py
src/dsalgo/graph_theory/: arborescense.py  biconnected_components.py  bipartite.py  chain_decomposition.py  connected_components.py  count_toposort.py  euler_tour.py  graph.py  graph_bfs.py  heavy_light_decomposition.py  lowest_common_ancestor.py  lowlink.py  make_tree.py  max_cardinal_match.py  maxflow.py  mincost_flow.py  minimum_spanning_tree.py  path_on_tree.py  query_on_treepath.py  rerooting.py  scc.py  shortest_path.py  strongly_connected_components.py  traveling_salesman.py  tree_bfs.py  tsp.py  union_find.py
src/dsalgo/misc/: argmax.py  bincount.py  compress_array.py  flatnonzero.py  inversion_count.py  sparse_table.py  verbal_arithmetic.py
src/dsalgo/number_theory/: abundunt_number.py  divisor.py  euler_totient.py  extended_euclidean.py  extgcd.py  fermat_little_theorem.py  floor_sqrt.py  floor_sum.py  garner.py  gcd_lcm.py  lucas_theorem.py  modular_factorial.py  modular_inverse_table.py  perfect_power.py  prime.py
src/dsalgo/primality/: fermat_test.py  linear_sieve.py  lucas_lehmer.py  miller_rabin.py  miller_rabin_test.py  repin.py  sieve_of_eratosthenes_test.py
src/dsalgo/range_query/: sparse_table.py  sqrt_decompose.py
src/dsalgo/string/: lcp.py  sa.py  verbal_arithmetic.py  z_algorithm.py
src/dsalgo_numba/: array_rank.py  binary_heap_test.py  bitset.py  bitset_test.py  compress_array.py  fft_cooley_tukey_np.py  fibonnaci_sequence_nb.py  modular_combination_np.py  sparse_table.py  suffix_array.py  union_find.py
src/dsalgo_numba/algebra/: bit.py  (+3 more)
src/dsalgo_numpy/: permutations_np.py
tests/: __init__.py  access_priavte.py  etyping.py  generics.py  indexing.py  lambda_driver.py  path.py  segment2d.py  sushida.py  test_find_divisors.py
tests/asyncio/: add.py  hellow_world.py
tests/binary_heap/: jit.py
tests/combinatoics/: choose.py  nb_choose.py  nchoose.py  np_nchoose.py
tests/dsalgo/: segment2d.py  test_find_divisors.py
tests/import/: import_std.py
tests/jstage/: paper.py  raw_api.py
tests/modular/: inverse.py  nb_factorial.py  nb_matrix.py  np_factorial.py
tests/slicing/: jit.py
tests/test_dsalgo/: test_find_divisors.py
(+359 files in other folders)
