[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core >= 1.0.0"]

[tool.poetry]
authors = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
description = "A package for datastructures and algorithms."
documentation = "https://github.com/kagemeka/dsalgo-python"
exclude = ["./**/*_test.py", "./**/test_*.py", "./**/tests/"]
homepage = "https://github.com/kagemeka/dsalgo-python"
keywords = ["algorithm", "datastructure"]
license = "MIT"
maintainers = ["Hiroshi Tsuyuki <kagemeka1@gmail.com>"]
name = "dsalgo"
packages = [{include = "dsalgo", from = "src"}]
readme = "README.md"
repository = "https://github.com/kagemeka/dsalgo-python"
version = "0.1.0"

[tool.poetry.dependencies]
networkx = "^2"
numba = "^0"
numpy = "^1"
python = ">=3.9,<3.10"
scipy = "^1"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
autopep8 = "^"
black = "^"
blacken-docs = "^"
flake8 = "^"
isort = "^"
mkdocs = "^"
mypy = "^"
myst-parser = "^"
pdoc3 = "^"
pydocstyle = "^"
pytest = "^"
pytest-asyncio = "^"
sphinx = "^"
sphinxcontrib-mermaid = "^"
types-requests = "^"

[tool.poetry.scripts]

[tool.poetry.plugins]

[tool.poetry.urls]

[tool.black]
# compatible configurations -> https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
line-length = 79
target-version = ['py38', 'py39']

[tool.flake8]
count = 'true' # have not adaped to boolean value yet.
exclude = "src/dsalgo/numba" 
ignore = 'E203' 
show-source = 'true' 
statistics = 'true' 

[tool.isort]
# all config files -> https://pycqa.github.io/isort/docs/configuration/config_files.html
# full options -> https://pycqa.github.io/isort/docs/configuration/options.html
profile = "black"
# see all profiles -> https://pycqa.github.io/isort/docs/configuration/profiles.html
line_length = 79

[tool.mypy]
allow_untyped_globals = false
color_output = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
error_summary = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
no_strict_optional = false
pretty = true
python_version = "3.10"
show_absolute_path = false
show_column_numbers = true
show_error_codes = true
strict = true
strict_equality = true
strict_optional = true

[tool.pytest.ini_options]
cache_dir = "/tmp/.pytest_cache"
